Add ClientProxy default-method coverage test