@@ -25,3 +25,7 @@ graalvmNative {
         }
     }
 }
+
+tasks.named("test") {
+    jvmArgs += ["-Djava.security.manager=allow"]
+}
